--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -198,13 +198,15 @@ a.after:hover:after {
 
 h3 {
   margin: 0px 90px 0px 0px;
+  color: var(--blue);
 }
 
 button,
 button:hover {
   border: none;
   color: #fff;
-  padding: 10px;
+  padding: 15px;
+  font-size: 0.8rem;
 }
 
 .chat__messages,
@@ -231,6 +233,7 @@ h3 {
   font-weight: 600;
   text-align: center;
   font-size: 1.3rem;
+  color: var(--blue);
 }
 
 button {
@@ -288,8 +291,11 @@ button:disabled {
 
 .form-field input,
 .form-field select {
-  border: 1px solid #e1e1e1;
+  border: 2px solid var(--blue);
   padding: 10px;
+  background: var(--background-light);
+  border-radius: 10px;
+  color: white;
 }
 
 .chat {
@@ -315,6 +321,7 @@ button:disabled {
   color: white;
   margin: 10px 20px;
   text-align: left;
+  color: var(--blue);
 }
 
 .chat__sidebar li {
