location icon to text

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -327,6 +327,11 @@ footer {
   padding: 10px;
 }
 
+.location {
+  color: var(--blue);
+  font-weight: 900;
+}
+
 body {
   display: -webkit-box;
   display: -ms-flexbox;
