--- a/public/css/styles.scss
+++ b/public/css/styles.scss
@@ -299,6 +299,11 @@ footer{
   padding: 10px;
 }
 
+.location{
+  color: var(--blue);
+  font-weight: 900;
+}
+
 body{
   display: flex;
   flex-direction: column;
