--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -69,7 +69,6 @@ button:hover {
   padding: 0;
   font-family: Now;
   font-weight: 300;
-  font-size: .95rem;
 }
 
 li,
@@ -255,11 +254,6 @@ textarea:focus, input:focus {
   margin-right: 10px;
 }
 
-.message__title span {
-  color: #999;
-  font-size: 0.7rem;
-}
-
 /* Hide scrollbar for Chrome, Safari and Opera */
 *::-webkit-scrollbar {
   display: none;
@@ -307,6 +301,13 @@ footer {
 
 .menuwrapper.active {
   left: 0;
+}
+
+.time {
+  width: 100%;
+  font-size: 0.6rem;
+  text-align: center;
+  color: gray;
 }
 
 .topbar {
@@ -357,9 +358,6 @@ body {
 }
 
 @media (orientation: landscape) and (min-device-aspect-ratio: 1 / 1) {
-  * {
-    font-size: 1rem;
-  }
   .menu {
     display: none;
   }
