--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -151,6 +151,7 @@ button:disabled {
   display: flex;
   width: 100%;
   height: 100%;
+  padding-top: 50px;
 }
 
 .chat__sidebar {
@@ -317,12 +318,13 @@ footer {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  position: absolute;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
   height: var(--topbarsize);
   width: 100%;
-  background: var(--background-light);
+  background: #26313d;
   color: #2fff80;
   z-index: 10;
   padding: 10px;
