--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -360,6 +360,9 @@ body {
 }
 
 @media (orientation: landscape) and (min-device-aspect-ratio: 1 / 1) {
+  .chat {
+    padding-top: 0;
+  }
   .menu {
     display: none;
   }
