--- a/public/css/styles.scss
+++ b/public/css/styles.scss
@@ -328,6 +328,9 @@ body{
 
 
 @media (orientation: landscape) and (min-device-aspect-ratio: 1/1) {
+  .chat{
+    padding-top: 0;
+  }
   .menu{
     display: none;
   }
