--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -15,11 +15,25 @@
   --foreground: #ffffff;
   --background-light: #ffffff17;
   --topbarsize: 50px;
+  --app-height: 100vh;
+}
+
+html {
+  height: -webkit-fill-available;
 }
 
 body {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   background: var(--background);
   color: var(--foreground);
+  min-height: 100vh;
+  min-height: -webkit-fill-available;
 }
 
 h1:before {
@@ -107,7 +121,8 @@ button:disabled {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  height: 100vh;
+  min-height: 100vh;
+  min-height: -webkit-fill-available;
   width: 100vw;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
@@ -151,13 +166,15 @@ button:disabled {
   display: flex;
   width: 100%;
   height: 100%;
+  height: var(--app-height);
   padding-top: 50px;
 }
 
 .chat__sidebar {
   overflow-y: scroll;
   width: 260px;
-  height: 100vh;
+  min-height: 100vh;
+  min-height: -webkit-fill-available;
   outline: 2px solid var(--background-light);
 }
 
@@ -333,17 +350,6 @@ footer {
 .location {
   color: var(--blue);
   font-weight: 900;
-}
-
-body {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  height: 100vh;
 }
 
 .menuwrapper2 {
