--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -228,23 +228,30 @@ textarea:focus, input:focus {
 }
 
 .chat__footer form {
+  border-top: 2px solid var(--background-light);
   -webkit-box-flex: 1;
       -ms-flex-positive: 1;
           flex-grow: 1;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+  padding-top: 5px;
 }
 
-.chat__footer input {
+.chat__footer textarea {
   border: none;
-  padding: 10px;
+  padding: 10px 40px 10px 40px;
   -webkit-box-flex: 1;
       -ms-flex-positive: 1;
           flex-grow: 1;
   background: var(--background-light);
-  border-radius: 10px;
+  border-radius: 24px;
   color: white;
+  resize: none;
+  max-height: 20vh;
 }
 
 #send-location:hover {
@@ -265,9 +272,20 @@ textarea:focus, input:focus {
           align-items: baseline;
 }
 
+.message__title h3 {
+  font-size: 0.8rem;
+}
+
 .message__title h4 {
   font-weight: 600;
   margin-right: 10px;
+}
+
+.message__body p {
+  background: var(--background-light);
+  border-radius: 50px;
+  padding: 12px;
+  font-size: 0.8rem;
 }
 
 /* Hide scrollbar for Chrome, Safari and Opera */
@@ -348,6 +366,10 @@ footer {
 .location {
   color: var(--blue);
   font-weight: 900;
+  position: absolute;
+  bottom: 10px;
+  right: 65px;
+  padding: 10px;
 }
 
 .menuwrapper2 {
@@ -358,9 +380,26 @@ footer {
   display: none;
 }
 
-.location img {
+#sendlocation {
+  -webkit-filter: invert(1);
+          filter: invert(1);
+}
+
+#retlocation {
+  -webkit-filter: invert(1);
+          filter: invert(1);
+  mix-blend-mode: screen;
   height: 40px;
   width: 40px;
+}
+
+#retlocflex {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 @media (orientation: landscape) and (min-device-aspect-ratio: 1 / 1) {
@@ -392,15 +431,6 @@ footer {
     height: 0;
     margin: 0;
     padding: 0;
-  }
-  .location {
-    position: fixed;
-    top: 10px;
-    right: 10px;
-  }
-  .location img {
-    height: 50px;
-    width: 50px;
   }
 }
 /*# sourceMappingURL=styles.css.map */
