ui update without newline

--- a/public/css/styles.scss
+++ b/public/css/styles.scss
@@ -261,6 +261,7 @@ textarea:focus, input:focus{
     border-radius: 50px;
     padding: 12px;
     font-size: 0.8rem;
+    width: max-content;
   }
 }
 
