--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -286,6 +286,9 @@ textarea:focus, input:focus {
   border-radius: 50px;
   padding: 12px;
   font-size: 0.8rem;
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
 }
 
 /* Hide scrollbar for Chrome, Safari and Opera */
