--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -283,12 +283,14 @@ textarea:focus, input:focus {
 
 .message__body p {
   background: var(--background-light);
-  border-radius: 50px;
+  border-radius: 24px;
   padding: 12px;
   font-size: 0.8rem;
-  width: -webkit-max-content;
-  width: -moz-max-content;
-  width: max-content;
+  width: 100%;
+  max-width: -webkit-max-content;
+  max-width: -moz-max-content;
+  max-width: max-content;
+  overflow-wrap: break-word;
 }
 
 /* Hide scrollbar for Chrome, Safari and Opera */
