--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -286,7 +286,7 @@ textarea:focus, input:focus {
   border-radius: 24px;
   padding: 12px;
   font-size: 0.8rem;
-  width: 100%;
+  width: 60vw;
   max-width: -webkit-max-content;
   max-width: -moz-max-content;
   max-width: max-content;
@@ -426,8 +426,11 @@ footer {
     width: 30vw;
   }
   .menuwrapper2 .chat__sidebar {
-    width: 100%;
+    width: 25vw;
     outline: 2px solid var(--background-light);
+  }
+  .message__body p {
+    width: 40vw;
   }
   .topbar {
     display: -webkit-box;
