--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -31,6 +31,7 @@ body {
       -ms-flex-direction: column;
           flex-direction: column;
   background: var(--background);
+  background-size: contain;
   color: var(--foreground);
   height: var(--app-height);
 }
@@ -216,6 +217,7 @@ textarea:focus, input:focus {
   overflow-y: scroll;
   -webkit-overflow-scrolling: touch;
   padding: 10px;
+  background: transparent;
 }
 
 .chat__footer {
@@ -224,7 +226,8 @@ textarea:focus, input:focus {
   display: flex;
   -ms-flex-negative: 0;
       flex-shrink: 0;
-  margin: 10px;
+  padding: 10px;
+  background: #111d2a;
 }
 
 .chat__footer form {
@@ -258,8 +261,29 @@ textarea:focus, input:focus {
   cursor: pointer;
 }
 
+.message, .my__message {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
 .message {
-  padding: 10px;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+}
+
+.my__message {
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
 }
 
 .message__title {
@@ -274,6 +298,8 @@ textarea:focus, input:focus {
 
 .message__title h3 {
   font-size: 0.8rem;
+  width: 100%;
+  text-align: left;
 }
 
 .message__title h4 {
@@ -281,7 +307,13 @@ textarea:focus, input:focus {
   margin-right: 10px;
 }
 
-.message__body p {
+.my__message__title h3 {
+  width: 100%;
+  font-size: 0.8rem;
+  text-align: right;
+}
+
+.message__body p, .my__message__body p {
   background: var(--background-light);
   border-radius: 24px;
   padding: 12px;
@@ -429,7 +461,7 @@ footer {
     width: 25vw;
     outline: 2px solid var(--background-light);
   }
-  .message__body p {
+  .message__body p, .my__message__body p {
     width: 40vw;
   }
   .topbar {
