--- a/public/css/styles.scss
+++ b/public/css/styles.scss
@@ -295,6 +295,10 @@ textarea:focus, input:focus{
 }
 
 
+.server__message{
+  text-align: center;
+}
+
 /* Hide scrollbar for Chrome, Safari and Opera */
 *::-webkit-scrollbar {
   display: none;
