--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -329,6 +329,10 @@ textarea:focus, input:focus {
   text-align: center;
 }
 
+.server__message__body {
+  padding-bottom: 10px;
+}
+
 /* Hide scrollbar for Chrome, Safari and Opera */
 *::-webkit-scrollbar {
   display: none;
