--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -261,6 +261,24 @@ textarea:focus, input:focus {
   cursor: pointer;
 }
 
+.avatar {
+  width: 35px;
+  height: 35px;
+  border-radius: 50%;
+  margin-right: 10px;
+  background: #698ea5;
+  text-align: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
 .message, .my__message {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -294,10 +312,13 @@ textarea:focus, input:focus {
   -webkit-box-align: baseline;
       -ms-flex-align: baseline;
           align-items: baseline;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .message__title h3 {
-  font-size: 0.8rem;
+  font-size: 0.7rem;
   width: 100%;
   text-align: left;
 }
@@ -309,20 +330,43 @@ textarea:focus, input:focus {
 
 .my__message__title h3 {
   width: 100%;
-  font-size: 0.8rem;
+  font-size: 0.7rem;
   text-align: right;
+}
+
+.message__body, .my__message__body {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  gap: 0;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .message__body p, .my__message__body p {
   background: var(--background-light);
   border-radius: 24px;
   padding: 12px;
-  font-size: 0.8rem;
+  font-size: 0.7rem;
   width: 60vw;
   max-width: -webkit-max-content;
   max-width: -moz-max-content;
   max-width: max-content;
   overflow-wrap: break-word;
+}
+
+.my__message__body p {
+  background: var(--blue);
 }
 
 .server__message {
@@ -331,6 +375,7 @@ textarea:focus, input:focus {
 
 .server__message__body {
   padding-bottom: 10px;
+  font-size: 0.7rem;
 }
 
 /* Hide scrollbar for Chrome, Safari and Opera */
