--- a/public/css/styles.scss
+++ b/public/css/styles.scss
@@ -240,6 +240,17 @@ textarea:focus, input:focus{
   }
 }
 
+.avatar{
+  width: 35px;
+  height: 35px;
+  border-radius: 50%;
+  margin-right: 10px;
+  background: #698ea5;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
 .message, .my__message{
   display: flex;
@@ -258,8 +269,9 @@ textarea:focus, input:focus{
   display: flex;
   margin-bottom: 5px;
   align-items: baseline;
+  justify-content: center;
   h3{
-    font-size: 0.8rem;
+    font-size: 0.7rem;
     width: 100%;
     text-align: left;
   }
@@ -276,21 +288,33 @@ textarea:focus, input:focus{
 .my__message__title{
   h3{
     width: 100%;
-    font-size: 0.8rem;
+    font-size: 0.7rem;
     text-align: right;
   }
 }
 
 
 .message__body, .my__message__body{
+  display: flex;
+  flex-direction: row;
+  gap: 0;
+  justify-content: center;
+  align-content: center;
+  align-items: center;
   p{
     background: var(--background-light);
     border-radius: 24px;
     padding: 12px;
-    font-size: 0.8rem;
+    font-size: 0.7rem;
     width: 60vw;
     max-width: max-content;
     overflow-wrap: break-word;
+  }
+}
+
+.my__message__body{
+  p{
+    background: var(--blue);
   }
 }
 
@@ -301,6 +325,7 @@ textarea:focus, input:focus{
 
 .server__message__body{
   padding-bottom: 10px;
+  font-size: 0.7rem;
 }
 
 /* Hide scrollbar for Chrome, Safari and Opera */
