--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -180,10 +180,17 @@ button:disabled {
   border-right: 2px solid var(--background-light);
 }
 
+.chat__sidebar ol {
+  list-style-type: none;
+}
+
 .chat__sidebar li {
   background: var(--background-light);
-  padding: 10px;
+  padding: 7px 0 5px 16px;
   color: white;
+  font-size: 0.7rem;
+  border-radius: 5px;
+  margin: 5px;
 }
 
 .chat__sidebar h3 {
@@ -191,11 +198,8 @@ button:disabled {
   margin: 10px 20px;
   text-align: left;
   color: var(--blue);
-}
-
-.chat__sidebar li {
-  border-radius: 5px;
-  margin: 10px;
+  font-size: 0.9rem;
+  text-align: center;
 }
 
 .chat__main {
@@ -288,6 +292,11 @@ textarea:focus, input:focus {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+}
+
+#typingindicator {
+  padding: 0 0 0 15px;
+  font-size: 0.7rem;
 }
 
 .message, .my__message {
@@ -415,6 +424,8 @@ footer {
 
 .menu {
   display: block;
+  color: limegreen;
+  font-size: 0.9rem;
 }
 
 .menu:hover {
@@ -465,7 +476,6 @@ footer {
   height: var(--topbarsize);
   width: 100%;
   background: #26313d;
-  color: #2fff80;
   z-index: 10;
   padding: 10px;
 }
@@ -514,6 +524,9 @@ footer {
     padding-top: 0;
   }
   .menu {
+    display: none;
+  }
+  .roomname {
     display: none;
   }
   .menuwrapper {
