--- a/public/css/styles.scss
+++ b/public/css/styles.scss
@@ -256,11 +256,6 @@ textarea:focus, input:focus{
   justify-content: center;
 }
 
-#typingindicator{
-  padding: 0 0 0 15px;
-  font-size: 0.7rem;
-}
-
 .message, .my__message{
   display: flex;
   flex-direction: column;
@@ -444,6 +439,8 @@ footer{
 #typingindicator{
   list-style-type: none;
   color: var(--blue);
+  margin: 5px;
+  font-size: 0.7rem;
 }
 
 #sendlocation{
