pull refresh off

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -38,6 +38,7 @@ body {
      -moz-user-select: none;
       -ms-user-select: none;
           user-select: none;
+  overscroll-behavior-y: contain;
 }
 
 h1:before {
